package _04_Graphics.Utils.CutrEngine;

import java.awt.*;

public interface Dibujable {
    public void dibujar(Graphics g);
    public void actualizar();
}
